[package]
name = "latticequeries"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saolof/latticequeries.rs"
description = "Allows for fast hierarchical queries on Vecs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
